--- a/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="{{ asset('front/assets/css/kdt-inputs.css') }}" type="text/css"/>
 {% endblock %}
 
-{% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
-
 {% block main %}
     <div id="app"></div>
 {% endblock %}
 
 {% block javascripts %}
     {{ loadTranslationsForVueJS('AppBundle', '[admin_poll][form]') }}
+    {{ loadChartTypesFromDatabase() }}
     {{ loadVariantsFromDatabase() }}
 
     <script>
