Added visualisation of archived poll

--- a/src/AppBundle/Resources/views/backoffice/poll/archive.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/archive.html.twig
@@ -31,7 +31,7 @@
                 {% for poll in pagination %}
                     <tr>
                         <td>
-                            <a target="_blank" href="{{ path('answer_poll', {'token':poll.accessToken}) }}">
+                            <a target="_blank" href="{{ path('answer_poll_archive', {'token':poll.accessToken}) }}">
                                 {{ poll.title }}&nbsp;<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </td>
                         {% if is_granted('ROLE_ADMIN') %}
