backoffice/poll/index: fix trans pour archiver

--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -93,7 +93,7 @@
                                        onclick="return confirm('{{ 'admin_poll.table_values.archive_confirmation' | trans }}')"
                                        class="btn btn-warning btn-xs-block">
                                         <i class="fa fa-archive"></i>&nbsp;<span
-                                                class="hidden-sm-down">{{ 'admin_poll.table_values.delete' | trans }}</span>
+                                                class="hidden-sm-down">{{ 'admin_poll.table_values.archive' | trans }}</span>
                                     </a>
                                     <a href="{{ path('backoffice_poll_results', {'id': poll.id}) }}"
                                        class="btn btn-success btn-xs-block">
