--- a/src/AppBundle/Resources/views/backoffice/poll/results.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/results.html.twig
@@ -10,7 +10,7 @@
 
     {% if charts | length %}
         <div class="text-center">
-            <a class="btn btn-success btn-md-block mt-1 mt-lg-0"
+            <a class="btn btn-success btn-md-block mt-1"
                href="{{ path('backoffice_poll_export', {'id': poll.id}) }}">
                 <i class="fa fa-file-excel-o" aria-hidden="true"></i>&nbsp;Exporter vers excel
             </a>
