Fix les views/template de fosuserbundle en cachant le footer

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,5 +1,9 @@
 {% extends "::backoffice_base.html.twig" %}
 
+{% set includeFooter = false %}
+
+{% block bodyclass %}app header-fixed sidebar-hidden aside-menu-hidden{% endblock %}
+
 {% block title %}Kodastran Backoffice Login{% endblock %}
 
 {% block main %}
