--- a/src/AppBundle/Resources/views/polls/answer.html.twig
+++ b/src/AppBundle/Resources/views/polls/answer.html.twig
@@ -71,11 +71,11 @@
                             {% for choice in choices %}
                                 <div class="kdt-radio kdt-radio-above">
                                     <input type="radio"
-                                           id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}
+                                           id="{{ id ~ '_' ~ choice.value }}" {{ block('widget_attributes') }}
                                             {% if choice.value is defined %} value="{{ choice.value }}"{% endif %}
                                             {% if not multiple and choice.value == form.vars.data %} checked="checked"{% endif %}
                                     >
-                                    <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
+                                    <label for="{{ id ~ '_' ~ choice.value }}">{{ choice.data }}</label>
                                 </div>
                             {% endfor %}
                         </div>
@@ -85,12 +85,12 @@
                         <div class="row">
                             <div class="kdt-{% if multiple %}checkbox{% else %}radio{% endif %}">
                                 <input type="{% if multiple %}checkbox{% else %}radio{% endif %}"
-                                       id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}
+                                       id="{{ id ~ '_' ~ choice.value }}" {{ block('widget_attributes') }}
                                         {% if choice.value is defined %} value="{{ choice.value }}"{% endif %}
                                         {% if multiple and choice.value in form.vars.data %} checked="checked"{% endif %}
                                         {% if not multiple and choice.value == form.vars.data %} checked="checked"{% endif %}
                                 >
-                                <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
+                                <label for="{{ id ~ '_' ~ choice.value }}">{{ choice.data }}</label>
                             </div>
                         </div>
                     {% endfor %}
