Added html tag in mail

--- a/src/AppBundle/Resources/views/mail/share-poll.html.twig
+++ b/src/AppBundle/Resources/views/mail/share-poll.html.twig
@@ -1,13 +1,15 @@
-<p>
-    Bonjour,
-</p>
-<p>
-    Merci de compléter ce sondage
-    <a href="{{ url }}" title="Liens vers le sondage">{{ url }}</a>
-</p>
-<p>
-    Cordialement,
-</p>
-<p>
-    Service de Messagerie Automatique - Kodrastan.
-</p>
+<html>
+    <p>
+        Bonjour,
+    </p>
+    <p>
+        Merci de compléter ce sondage
+        <a href="{{ url }}" title="Liens vers le sondage">{{ url }}</a>
+    </p>
+    <p>
+        Cordialement,
+    </p>
+    <p>
+        Service de Messagerie Automatique - Kodrastan.
+    </p>
+</html>
