Vérif user pdt delete & archive+archive_delete pour un poll

--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -74,7 +74,7 @@
                             </td>
                             <td>
                                 {% if not poll.published %}
-                                    <a href="{{ path('backoffice_poll_archive_delete', {'id': poll.id}) }}"
+                                    <a href="{{ path('backoffice_poll_delete', {'id': poll.id}) }}"
                                        onclick="return confirm('{{ 'admin_poll.table_values.delete_confirmation' | trans }}')"
                                        class="btn btn-danger btn-xs-block">
                                         <i class="fa fa-trash"></i>&nbsp;<span
@@ -93,7 +93,7 @@
                                                 class="hidden-sm-down">{{ 'admin_poll.table_values.publish' | trans }}</span>
                                     </a>
                                 {% else %}
-                                    <a href="{{ path('backoffice_poll_delete', {'id': poll.id}) }}"
+                                    <a href="{{ path('backoffice_poll_archive', {'id': poll.id}) }}"
                                        onclick="return confirm('{{ 'admin_poll.table_values.archive_confirmation' | trans }}')"
                                        class="btn btn-warning btn-xs-block">
                                         <i class="fa fa-archive"></i>&nbsp;<span
