--- a/web/front/assets/css/style.css
+++ b/web/front/assets/css/style.css
@@ -101,3 +101,31 @@ footer {
     background-color: #4ebada;
     border-color: #4ebada;
 }
+
+.btn-square {
+    border-radius: 0;
+}
+
+.btn-primary-custom {
+    background-color: #20a8d8;
+    border-color: #20a8d8;
+}
+
+.btn-primary-custom:hover {
+    background-color: #1985ac;
+    border-color: #187fa3;
+}
+
+.btn-success-custom {
+    background-color: #4dbd74;
+    border-color: #4dbd74;
+}
+
+.btn-success-custom:hover {
+    background-color: #3a9d5d;
+    border-color: #379558;
+}
+
+.img-tuto {
+    max-width:100%;
+}
