--- a/src/AppBundle/Resources/views/mail/share-poll.text.twig
+++ b/src/AppBundle/Resources/views/mail/share-poll.text.twig
@@ -2,7 +2,7 @@
 
 {{ 'mails.share_poll.hello' | trans }}
 
-{{ 'mails.share_poll.please_complete_the_poll' | trans }}&nbsp;<a title="{{ 'mails.share_poll.link_to_poll' | trans }}" href="{{ url }}">{{ url }}</a>
+{{ 'mails.share_poll.please_complete_the_poll' | trans }} {{ url }}.
 
 {{ 'mails.share_poll.cordially' | trans }}
 
