--- a/src/AppBundle/Resources/views/mail/share-poll.text.twig
+++ b/src/AppBundle/Resources/views/mail/share-poll.text.twig
@@ -2,7 +2,7 @@
 
 {{ 'mails.share_poll.hello' | trans }}
 
-{{ 'mails.share_poll.please_complete_the_poll' | trans }} {{ url }}.
+{{ 'mails.share_poll.please_complete_the_poll' | trans({'%username%': user.username }) }} {{ url }}.
 
 {{ 'mails.share_poll.cordially' | trans }}
 
