--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -3,6 +3,8 @@
 
 {% block title %}{{ 'profile.preview' | trans }}{% endblock %}
 
+{% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
+
 {% block fos_user_content %}
 {% include "FOSUserBundle::Profile/show_content.html.twig" %}
 {% endblock fos_user_content %}
