--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -1,5 +1,7 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
+{% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
+
 {% block fos_user_content %}
 {% include "FOSUserBundle::ChangePassword/change_password_content.html.twig" %}
 {% endblock fos_user_content %}
