--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -145,7 +145,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="shareModalLabel"><i class="fa fa-envelope"></i>&nbsp;Envoie par mail
+                    <h5 class="modal-title" id="shareModalLabel"><i class="fa fa-envelope"></i>&nbsp;Envoi par mail
                     </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
