Page de présentation : amélioration de la version mobile/tablette

--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -21,8 +21,10 @@
                     {{ 'front.presentation.inscription.content' | trans | raw }}
                 </p>
             </div>
+            <div class="col-12">
+                <hr>
+            </div>
         </div>
-        <hr>
         <div class="row p-md-4 p-2">
             <div class="colcol-12 col-md-4">
                 <p class="text-justify">{{ 'front.presentation.step.1' | trans | raw }}</p>
@@ -32,8 +34,10 @@
                     <img class="img-tuto" src="{{ asset('front/assets/img/tuto1.png') }}">
                 </a>
             </div>
+            <div class="col-12">
+                <hr>
+            </div>
         </div>
-        <hr>
         <div class="row p-md-4 p-2 flex-md-row-reverse">
             <div class="col-12 col-md-4">
                 <p class="text-justify">{{ 'front.presentation.step.2' | trans | raw }}</p>
@@ -43,8 +47,10 @@
                     <img class="img-tuto" src="{{ asset('front/assets/img/tuto2.png') }}">
                 </a>
             </div>
+            <div class="col-12">
+                <hr>
+            </div>
         </div>
-        <hr>
         <div class="row p-md-4 p-2">
             <div class="col-12 col-md-4">
                 <p class="text-justify">{{ 'front.presentation.step.3' | trans | raw }}</p>
@@ -54,8 +60,10 @@
                     <img class="img-tuto" src="{{ asset('front/assets/img/tuto3.png') }}">
                 </a>
             </div>
+            <div class="col-12">
+                <hr>
+            </div>
         </div>
-        <hr>
         <div class="row p-md-4 p-2 flex-md-row-reverse">
             <div class="col-12 col-md-6">
                 <p class="text-justify">{{ 'front.presentation.step.4' | trans | raw }}</p>
@@ -80,8 +88,10 @@
                     <img class="img-tuto" src="{{ asset('front/assets/img/tuto4-2.png') }}">
                 </a>
             </div>
+            <div class="col-12">
+                <hr>
+            </div>
         </div>
-        <hr>
         <div class="row p-md-4 p-2">
             <div class="col-12 col-md-4">
                 <p class="text-justify">{{ 'front.presentation.step.5' | trans | raw }}</p>
@@ -91,8 +101,10 @@
                     <img class="img-tuto" src="{{ asset('front/assets/img/tuto5.png') }}">
                 </a>
             </div>
+            <div class="col-12">
+                <hr>
+            </div>
         </div>
-        <hr>
         <div class="row p-md-4 p-2 flex-md-row-reverse">
             <div class="col-12 col-md-4">
                 <p class="text-justify">{{ 'front.presentation.step.6' | trans | raw }}</p>
@@ -102,8 +114,10 @@
                     <img class="img-tuto" src="{{ asset('front/assets/img/tuto6.png') }}">
                 </a>
             </div>
+            <div class="col-12">
+                <hr>
+            </div>
         </div>
-        <hr>
         <div class="text-center">
             {% if app.user %}
                 <a href="{{ path('backoffice') }}" class="btn btn-lg btn-success btn-success-custom btn-square">
